--- a/index.html
+++ b/index.html
@@ -106,5 +106,20 @@
 
 
     </div>
+
+
+    <!--Beginning of Footer-->
+    <footer>
+      <div class="footernav">
+        <span class="footer-logo">MY Times</span>
+        <span><a href="">World</a></span>
+        <span><a href="">U.S.</a></span>
+        <span><a href="">Tech</a></span>
+        <span><a href="">Science</a></span>
+      </div>
+      <div class="copyright">
+        <span>© 2016, My Times (A Division of Codecademy bite)</span>
+      </div>
+    </footer>
   </body>
 </html>
